Some PR Fixes as suggested , still working on others